--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,155 @@
-.App {
+html {
+  font-size: 1.2vw;
+  color: #fff;
+  font-family: Tahoma, sans-serif;
+}
+body {
+  background: #000 url(//cssanimation.rocks/demo/starwars/images/bg.jpg);
+}
+
+.logo__heading {
+  font-size: 2rem;
   text-align: center;
+  margin: 0 0;
+  opacity: 0.85;
+}
+.logo__star {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 25%;
+}
+.logo__wars {
+  width: 25%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.logo__wrapper {
+  margin-top: 2rem;
+  margin-bottom: 3rem;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+table {
+  opacity: 0.76;
+  border-radius: 0.3rem;
+  width: 70%;
+  font-size: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+  border-collapse: collapse;
+  overflow: hidden;
+  margin-bottom: 3rem;
+}
+th {
+  background-color: #fdf253;
+  text-align: left;
+  padding: 0.5rem 2rem;
+}
+td {
+  text-align: left;
+  padding: 0.5rem 2rem;
+}
+tr{
+  transition:all 0.3s ease;
+  box-shadow: inset 0rem 0rem 0.2rem 0.5rem;
+}
+tr:hover{
+  cursor:pointer;
+  box-shadow: inset 0 0 0 0;
+}
+thead > tr {
+  color: #000;
+}
+tbody:before {
+  line-height:2rem;
+  content:".";
+  color:white;
+  display:block;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+tbody > tr {
+  border: 5px solid #fdf253;
+  color: #fdf253;
+}
+tbody > tr:nth-child(odd) {
+  color: #000;
+  background-color: #fdf253;
+  box-shadow: inset 0rem 0rem 0.2rem 0.5rem;
+}
+tbody > tr:nth-child(odd):hover{
+  box-shadow: inset 0 0 0 0;
+}
+
+.spinner {
+  margin: auto;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  transform: rotateX(60deg);
+  animation: spinner-wiggle 1.15s infinite;
+}
+.spinner:before,
+.spinner:after {
+  content: "";
+  position: absolute;
+  margin: -4px;
+  box-sizing: inherit;
+  width: inherit;
+  height: inherit;
+  border-radius: inherit;
+  opacity: 0.05;
+  border: inherit;
+  border-color: transparent;
+  animation: spinner-spin 1.15s cubic-bezier(0.6, 0.2, 0, 0.8) infinite,
+    spinner-fade 1.15s linear infinite;
+}
+
+.spinner:before {
+  border-top-color: #66e6ff;
+}
+
+.spinner:after {
+  border-top-color: #f0db75;
+  animation-delay: 0.3s;
+}
+
+@keyframes spinner-spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes spinner-fade {
+  20% {
+    opacity: 0.1;
+  }
+  40% {
+    opacity: 1;
+  }
+  60% {
+    opacity: 0.1;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
+@keyframes spin {
+  0% {
     transform: rotate(0deg);
   }
-  to {
+  100% {
     transform: rotate(360deg);
+  }
+}
+@media (max-width: 768px) {
+  table {
+    width: 80%;
+  }
+}
+@media (max-width: 500px) {
+  .logo__star {
+    width: 40%;
+  }
+  .logo__wars {
+    width: 40%;
   }
 }
