--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 html {
   font-size: 1.2vw;
   color: #fff;
-  font-family: Tahoma, sans-serif;
+  font-family: 'Pathway Gothic One', sans-serif;
 }
 body {
   background: #000 url(//cssanimation.rocks/demo/starwars/images/bg.jpg);
@@ -27,7 +27,7 @@ body {
 }
 .logo__wrapper {
   margin-top: 2rem;
-  margin-bottom: 3rem;
+  margin-bottom: -1rem;
 }
 
 table {
@@ -79,6 +79,57 @@ tbody > tr:nth-child(odd) {
 }
 tbody > tr:nth-child(odd):hover{
   box-shadow: inset 0 0 0 0;
+}
+.filter__container{
+  margin: 1rem -1rem;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.filter{
+  flex: 1 1;
+}
+.filter__label{
+  z-index: -1;
+  position:relative;
+  left:2rem;
+  top:2.2rem;
+  color: #fff;
+  background-color: #000;
+  font-size: 1.5rem;
+  transition: 0.5s;
+  display:inline-block;
+}
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  border: 1px solid white;
+  -webkit-text-fill-color: white;
+  -webkit-box-shadow: 0 0 0px 1000px transparent inset;
+  transition: background-color 1000000s ease-in-out 0s;
+}
+.filter__input{
+  font-family: 'Pathway Gothic One', sans-serif;
+  padding: 0.2rem 0;
+  padding-left: 1.5rem;
+  display: inline-block;
+  margin: 0 1rem;
+  height: 2rem;
+  font-size: 1.5rem;
+  background-color: transparent;
+  border: 3px solid #fff;
+  border-radius: 4px;
+  color: #fff;
 }
 
 .spinner {
